testing hover under header's elements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
 </head>
 <body>
     <!-- inizio header -->
-    <header></header>
+    <header>
+        <nav>
+            <section class="header-section">
+                <div>
+                    <img src="./img/logo-small.png" alt="logo dropbox">
+                </div>
+                <div></div>
+                <div>a</div>
+                <div>a</div>
+            </section>
+            <section class="header-section">
+                <div>a</div>
+                <div>a</div>
+                <div>a</div>
+                <div>a</div>
+            </section>
+        </nav>
+    </header>
     <!-- fine header -->
 
     <!-- inizio main -->
