creazione header dropbox

--- a/index.html
+++ b/index.html
@@ -16,15 +16,29 @@
                 <div>
                     <img src="./img/logo-small.png" alt="logo dropbox">
                 </div>
-                <div></div>
-                <div>a</div>
-                <div>a</div>
+                <div>
+                    <a href="">Perch&#232; Dropbox</a>
+                </div>
+                <div>
+                    <a href="">Funzioni</a>
+                </div>
+                <div>
+                    <a href="">Piani e Prezzi</a>
+                </div>
             </section>
             <section class="header-section">
-                <div>a</div>
-                <div>a</div>
-                <div>a</div>
-                <div>a</div>
+                <div>
+                    <a href="">Supporto</a>
+                </div>
+                <div>
+                    <a href="">Contatta l'ufficio vendite</a>
+                </div>
+                <div>
+                    <a href="">Accedi</a>
+                </div>
+                <div>
+                    <a href="" class="blueoption">inizia</a>
+                </div>
             </section>
         </nav>
     </header>
