inizio creazione jumbo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- inizio header -->
     <header>
         <nav>
+            <!-- sezione header di sinistra -->
             <section class="header-section">
                 <div>
                     <img src="./img/logo-small.png" alt="logo dropbox">
@@ -26,6 +27,7 @@
                     <a href="">Piani e Prezzi</a>
                 </div>
             </section>
+            <!-- sezione header di destra -->
             <section class="header-section">
                 <div>
                     <a href="">Supporto</a>
@@ -47,11 +49,11 @@
     <!-- inizio main -->
      <main>
         <!-- jumbo -->
-        
+        <div class="titolo">
+            <h1>Tutto ci&#242; che ti serve per il lavoro, in unico posto.</h1>
+        </div>
          <div class="macrosection">
-            <div class="titolo">
-
-            </div>
+            
             <div></div>
             <div></div>
          </div>
