creating dropbox operation section

--- a/index.html
+++ b/index.html
@@ -205,39 +205,39 @@
             </section>
 
         </div>
-        <span id="postmini">Esegui più operazioni con Dropbox Buisness</span>
+        <span id="postmini"><strong>Esegui più operazioni con Dropbox Buisness</strong></span>
 
         <!-- sezione drop operations -->
         <div class="drop-operation">
             <div>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
+                <img src="./img/business-feature-switching-tools.png" alt="">
+                <h3>Passa di mano da uno strumento all'altro</h3>
+                <p>Porta a termina l'attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsft Office e Dropbox Paper direttamente da Dropbox.</p>
             </div>
             <div>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
+                <img src="./img/business-feature-send-files-it.png" alt="">
+                <h3>Passa di mano da uno strumento all'altro</h3>
+                <p>Porta a termina l'attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsft Office e Dropbox Paper direttamente da Dropbox.</p>
             </div>
             <div>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
+                <img src="./img/business-feature-coordinate-it.png" alt="">
+                <h3>Passa di mano da uno strumento all'altro</h3>
+                <p>Porta a termina l'attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsft Office e Dropbox Paper direttamente da Dropbox.</p>
             </div>
             <div>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
+                <img src="./img/business-feature-integrations-it.png" alt="">
+                <h3>Passa di mano da uno strumento all'altro</h3>
+                <p>Porta a termina l'attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsft Office e Dropbox Paper direttamente da Dropbox.</p>
             </div>
             <div>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
+                <img src="./img/business-feature-multi-device.png" alt="">
+                <h3>Passa di mano da uno strumento all'altro</h3>
+                <p>Porta a termina l'attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsft Office e Dropbox Paper direttamente da Dropbox.</p>
             </div>
             <div>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
+                <img src="./img/business-feature-security.png" alt="">
+                <h3>Passa di mano da uno strumento all'altro</h3>
+                <p>Porta a termina l'attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsft Office e Dropbox Paper direttamente da Dropbox.</p>
             </div>
         </div>
           
